--- a/apps/demo1/Dockerfile
+++ b/apps/demo1/Dockerfile
@@ -1,8 +1,8 @@
 FROM golang
 
-COPY main . 
-RUN chmod +x main 
+COPY save . 
+RUN chmod +x save 
 ENV REGION=ap-northeast-2
 ENV DYNAMODB_TABLE=dev
 ENV CLOUDMAP_SERVICE_NAME=ecs
-CMD ["./main"]
+CMD ["./save"]
